집에서 대거 수정

--- a/_posts/2025-10-24-IROS.md
+++ b/_posts/2025-10-24-IROS.md
@@ -1,10 +1,9 @@
 ---
 layout: post
-title: IROS 2025 / Shanghai Tour
+title: IROS 2025 / Shanghai Tour 🦾
 date: 2025-10-24 18:00:00
-description: IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) was held on Hangzhou
+description: IEEE/RSJ International Conference on Intelligent Robots🤖 and Systems (IROS) was held on Hangzhou🇨🇳
 tags: everyday_life robot
 categories: sample-posts
-chart:
-  plotly: true
+
 ---
