--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,6 +50,6 @@ arm design.},
   pdf          = {yoon2025kroc.pdf},
   preview      = {kroc-g1.gif},
   note = {<a href="https://www.irobotnews.com/news/articleView.html?idxno=37582" target="_blank">Excellence Undergraduate Paper Award</a>},
-  selected     = {true},
+  selected     = {false},
   abstract     = {Optimizing kinematic design is essential to enhance the performance of humanoid robots. Nevertheless, most existing research focuses on single performance metrics, while real-world applications require comprehensive optimization. This study investigates optimal shoulder joint base frame angles in a virtual MuJoCo-RBDL hybrid environment using the Unitree G1 humanoid. Multi-objective criteria including torque efficiency, overload ratio, energy consumption, and manipulability index were evaluated. The differential-evolution-based optimization identified 14.4° (X-axis) and -2.4° (Z-axis) as optimal angles, improving torque efficiency by 1.1\%, energy efficiency by 3.3\%, and manipulability by 2.3\% compared to the baseline. Findings provide quantitative guidelines for designing efficient 7-DOF humanoid shoulder mechanisms.},
 }
