IROS blog update

--- a/_posts/2025-10-24-IROS.md
+++ b/_posts/2025-10-24-IROS.md
@@ -5,5 +5,301 @@ date: 2025-10-24 18:00:00
 description: IEEE/RSJ International Conference on Intelligent Robots🤖 and Systems (IROS) was held on Hangzhou🇨🇳
 tags: everyday_life robot
 categories: sample-posts
+thumbnail: assets/img/iros/D3/D3_0.jpeg
 
 ---
+
+It was quite a long journey for a conference visit. I arrived on 17 October (Fri) and returned to Korea on 24 October (Fri).
+Looking back, this trip became a turning point for me.
+
+Visiting China especially Shanghai and Hangzhou completely changed my perspective. The level of technology in China right now is astonishing. Whenever I read recent papers, I notice that Chinese researchers appear in almost every author list. And when I occasionally watch robotics videos on YouTube, I often find myself speechless😮. Seeing those very robots in person during the conference was incredible. the performance I had only seen online was happening right in front of me.
+
+I’d like to share that experience in detail through this blog.
+
+On a more personal note, I also spent wonderful time with my cousin Gun-Wook (건욱), who guided me around Shanghai. I honestly cannot imagine how difficult the trip would have been without his help. I’m also grateful to Seol-Sa-Yeon (설사연), his girlfriend, who took me to some of the most popular spots in the city.
+
+So, with all that said—
+
+> Let’s dive into the story.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include video.liquid path="https://www.youtube.com/embed/Ip6cw8gfHHI?si=mxSmQEHBMjvZICu5" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    d4vd - here with me.
+</div>
+
+> First Day : much needed catch up after a long time.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_arrive.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_street.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+공안에 붙잡힌 썰
+
+사촌동생의 여자친구분을 처음 본 썰
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_yang0.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_market.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_yang1.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D1/D1_yang2.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+첫날에 사촌동생이랑 나눈 얘기
+
+> Second Day : Shanghai is simply on another level.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_mich1.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_mich2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_mich3.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+기름진거 먹고 화장실이 다른 것 처음 앎
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_hotel.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_popmart.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_waitan.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+와이탄과 동방명주 근처를 둘러보면서, 팝마트에 라부부를 뽑아보려고 가봤지만 앞에 사람들이 다가져가서 인형뽑기만 하고 쪽박 차고 나옴.
+
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_triple1.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_triple2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_car2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+화웨이 샤오미 BYD 매장을 다 가보고 트리플 폴드의 기술을 먼저 봤었다.
+그리고 벤츠에서 미래의 컨셉카를 어떻게 그리는지 볼 수 있었다.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_cafe1.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_cafe2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_0.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+어디 유럽거리 비스무리 한 곳을 가서 커피 마시고, 다다음날의 오랄 발표 대본을 준비 하였다.
+
+용의 기운을 받아서 그런지 어떤식으로 말해야 할 지 잘 구상이 되었다.
+
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_1.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_3.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D2/D2_4.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/iros/D2/D2_5.jpeg" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+그리고 상하이에 유명한 백화점이 몇군데 있는데, 사촌동생 왈로는 동방명주 근처에 있는 백화점이 가장 으리으리하고 그 다음이 내가 갔던 곳이라고 한다.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_6.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_7.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_8.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+<div class="caption">
+    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+</div>
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_9.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_10.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_11.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+어디 유럽거리 비스무리 한 곳을 가서 커피 마시고, 다다음날의 오랄 발표 대본을 준비 하였다.
+
+용의 기운을 받아서 그런지 어떤식으로 말해야 할 지 잘 구상이 되었다.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include video.liquid path="assets/img/iros/D2/D2_12.MOV" class="img-fluid rounded z-depth-1" controls=true %}
+    </div>
+</div>
+<div class="caption">
+    북경오리 손질 영상
+</div>
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_13.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_14.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_15.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_16.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+엄청난 식당에서 식사를 대접 받았다. 정말 맛있는 와인도 마셨고 행복했다.
+
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include video.liquid path="assets/img/iros/D2/D2_17.MOV" class="img-fluid rounded z-depth-1" controls=true %}
+    </div>
+</div>
+<div class="caption">
+    테슬라 축하 공연
+</div>
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_18.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D2/D2_19.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
+상하이 동방명주가 불꺼지는 것을 기다리면서 상하이 도심 한복판을 돌아봤다.
+
+> Third Day : Move to brandnew city Hangzhou.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_1.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_2.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+<div class="caption">
+    테슬라 축하 공연
+</div>
+
+아침에 국밥과 헤이티를 먹고, 복권을 긁었다. 아쉽게도 꽝.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_3.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_4.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+<div class="caption">
+    테슬라 축하 공연
+</div>
+
+상하이에는 역이 많은데 동역은 진짜 공항만큼 크다. 중국의 모든 역은 소지품 검사를 하기에 물건을 잘 챙겨가야 한다.
+
+스프레이와 면도크림을 압수당했다. 다행히도 사촌동생 집으로 돌아오려고 했어서, 사촌동생 집으로 택배를 보냈다.
+
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_5.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/iros/D3/D3_6.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+<div class="caption">
+    테슬라 축하 공연
+</div>
+
+아이로스 시간표와 호텔에 로봇이 작동하는 것을 보고 깜짝 놀랐다.
+
+> fourth Day : Workshop for IROS.
+
