--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   author = {Yoon</u>*, <u>Jiwon and Lee*, Sujin and Ihn†, Yong Seok},
   booktitle    = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Hangzhou},
   year         = {2025},
-  note         = {Oral Presentation for Humanoid Section},
+  note         = {<a href="/assets/img/iros/oral.jpeg" target="_blank">Oral Presentation for Humanoid Section</a>},
   pdf          = {yoon2025iros.pdf},
   abbr         = {IROS},
   journal      = {IROS},
@@ -48,7 +48,7 @@ arm design.},
   year         = {2025},
   abbr         = {KRoC},
   pdf          = {yoon2025kroc.pdf},
-  preview      = {kroc-g1.gif},
+  preview      = {kroc.jpeg},
   note = {<a href="https://www.irobotnews.com/news/articleView.html?idxno=37582" target="_blank">Excellence Undergraduate Paper Award</a>},
   selected     = {false},
   abstract     = {Optimizing kinematic design is essential to enhance the performance of humanoid robots. Nevertheless, most existing research focuses on single performance metrics, while real-world applications require comprehensive optimization. This study investigates optimal shoulder joint base frame angles in a virtual MuJoCo-RBDL hybrid environment using the Unitree G1 humanoid. Multi-objective criteria including torque efficiency, overload ratio, energy consumption, and manipulability index were evaluated. The differential-evolution-based optimization identified 14.4° (X-axis) and -2.4° (Z-axis) as optimal angles, improving torque efficiency by 1.1\%, energy efficiency by 3.3\%, and manipulability by 2.3\% compared to the baseline. Findings provide quantitative guidelines for designing efficient 7-DOF humanoid shoulder mechanisms.},
