--- a/_posts/2025-05-05-Hyundai.md
+++ b/_posts/2025-05-05-Hyundai.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: Hyundai Mobility Class - Advanced Motor Class
+title: Hyundai Mobility Class - Advanced Motor Class🏎️
 date: 2025-05-05 14:24:00
 description:  designed and fabricated the motor, differential gear, and suspension components, and assembled them into a fully functional RC car🚗
 tags: study robot everyday-life
 categories: sample-posts
+thumbnail: assets/img/Hyundai/with_friend.jpeg
 ---
