--- a/_posts/2025-10-24-IROS.md
+++ b/_posts/2025-10-24-IROS.md
@@ -18,7 +18,7 @@ I’d like to share that experience in detail through this blog.
 
 On a more personal note, I also spent wonderful time with my cousin Gun-Wook (건욱), who guided me around Shanghai. I honestly cannot imagine how difficult the trip would have been without his help. I’m also grateful to Seol-Sa-Yeon (설사연), his girlfriend, who took me to some of the most popular spots in the city.
 
-So, with all that said—
+So, with all that said
 
 > Let’s dive into the story.
 
@@ -42,12 +42,12 @@ So, with all that said—
     </div>
 </div>
 <div class="caption">
-    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+    I arrived at PVG airport.
 </div>
 
-공안에 붙잡힌 썰
+When I went through immigration, a Chinese police officer suddenly stopped me. Since I bulked up to 95 kg, my current face didn’t quite match the photo in my passport. At least, that’s my best guess. They spoke entirely in Chinese, so I had absolutely no idea what they were saying. I just waited for about 30 minutes until they finally approved my entry into Shanghai. In the end, I showed them my conference invitation letter. Honestly, I should have shown it earlier 😅.
 
-사촌동생의 여자친구분을 처음 본 썰
+After that little incident, I met my cousin and his friend. At first, I thought she was just someone interested in Korean culture, you know, the whole K-something syndrome going around these days. But I was completely wrong. She was actually my cousin’s girlfriend, and she kindly offered to drive me home. It was my first time meeting her, and seeing my cousin with a girlfriend made me realize that he’s getting older too… just like me. It felt strangely funny and heart warming at the same time 🤩.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -67,10 +67,18 @@ So, with all that said—
     </div>
 </div>
 <div class="caption">
-    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+    I went some random restaurant for eating 양꼬치(lamb screwer)
 </div>
 
-첫날에 사촌동생이랑 나눈 얘기
+With my cousin, we talked about so many things. We shared a lot, especially about our big family. I used to teach him math, and honestly, he never listened back then. But now he was guiding me around the entire city, speaking Chinese fluently, and even studying international trade.
+
+If you asked me back then, I never would’ve imagined any of this happening 😂.
+That was probably the happiest part of the trip having the kind of conversations you can only really share with family.
+
+We talked about a lot of things good news, bad news, life changes and it hit me that we’ve grown a lot. We used to talk only about video games, but now we’re talking about our futures. It really felt like both of us were getting older and becoming more mature.
+
+Maybe that’s why the beer tasted extra good that night.
+And honestly, nothing pairs better with beer than lamb skewers. Absolutely nothing.
 
 > Second Day : Shanghai is simply on another level.
 
@@ -87,10 +95,12 @@ So, with all that said—
 </div>
 
 <div class="caption">
-    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
+    Dahu Chun (大壶春), a Michelin-recommended dumpling spot.
 </div>
 
-기름진거 먹고 화장실이 다른 것 처음 앎
+I visited one of the famous shengjianbao restaurants in Shanghai. I already knew that Chinese food tends to be oily, but the dumplings were even greasier than I expected. What surprised me the most, though, was that even though the place is Michelin-recommended, the restroom wasn’t as clean as I imagined.
+
+So, if anyone is planning to travel to China, here’s a small tip: many bathrooms are still squat-style, and some may not be as clean as you’d expect. Just something to keep in mind before you go.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -103,12 +113,6 @@ So, with all that said—
         {% include figure.liquid path="assets/img/iros/D2/D2_waitan.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
-
-<div class="caption">
-    I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
-</div>
-
-와이탄과 동방명주 근처를 둘러보면서, 팝마트에 라부부를 뽑아보려고 가봤지만 앞에 사람들이 다가져가서 인형뽑기만 하고 쪽박 차고 나옴.
 
 
 <div class="row mt-3">
@@ -127,8 +131,11 @@ So, with all that said—
     I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
 </div>
 
-화웨이 샤오미 BYD 매장을 다 가보고 트리플 폴드의 기술을 먼저 봤었다.
-그리고 벤츠에서 미래의 컨셉카를 어떻게 그리는지 볼 수 있었다.
+I spent some time relaxing while walking around the Bund and the Oriental Pearl Tower area. Recently, I found out that the “Labubu” figures are insanely popular, so I went to a POP MART store hoping to get one. But by the time I got there, everything was already taken. People were literally walking out with entire boxes, so someone like me who just wanted one basically had no chance. I ended up doing the blind grabbing box machine and walked away empty handed.
+
+I also visited the Huawei, Xiaomi, and BYD stores to check out their latest products, including their triple fold phones. I actually saw Samsung demonstrate this technology about three years ago, so seeing China push it forward made me feel like an interesting competition is coming.
+
+And at the Mercedes showroom, I got to see how they envision their future concept cars, which was pretty inspiring.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -146,9 +153,11 @@ So, with all that said—
     I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
 </div>
 
-어디 유럽거리 비스무리 한 곳을 가서 커피 마시고, 다다음날의 오랄 발표 대본을 준비 하였다.
+I went to Xintiandi, which is often described as a European-style street, and had a cup of coffee while preparing my script for the oral presentation that was scheduled for the day after next. Among all the places I visited in Shanghai, Xintiandi definitely had the biggest crowds.
 
-용의 기운을 받아서 그런지 어떤식으로 말해야 할 지 잘 구상이 되었다.
+In most academic conferences, it is quite normal to have more fifty people in the audience. So I kept that image in mind as I prepared, imagining all those people sitting in front of me. At that moment, I found myself hoping that the audience would truly understand the new concept "effective workspace" I introduced and appreciate its depth.
+
+Maybe it was the energy of the place or just the excitement building up, but the ideas for how I should deliver the talk came together very clearly.
 
 
 <div class="row mt-3">
@@ -175,6 +184,7 @@ So, with all that said—
     I arrived at PVG airport and went for eating 양꼬치(lamb screwl)
 </div>
 
+TIDU RESERVE,첸탄 타이쿠 리(Taikoo Li Qiantan)
 그리고 상하이에 유명한 백화점이 몇군데 있는데, 사촌동생 왈로는 동방명주 근처에 있는 백화점이 가장 으리으리하고 그 다음이 내가 갔던 곳이라고 한다.
 
 <div class="row mt-3">
@@ -210,7 +220,7 @@ So, with all that said—
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include video.liquid path="assets/img/iros/D2/D2_12.MOV" class="img-fluid rounded z-depth-1" controls=true %}
+        {% include video.liquid path="assets/img/iros/D2/D2_12.mp4" class="img-fluid rounded z-depth-1" controls=true %}
     </div>
 </div>
 <div class="caption">
@@ -237,7 +247,7 @@ So, with all that said—
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include video.liquid path="assets/img/iros/D2/D2_17.MOV" class="img-fluid rounded z-depth-1" controls=true %}
+        {% include video.liquid path="assets/img/iros/D2/D2_17.mp4" class="img-fluid rounded z-depth-1" controls=true %}
     </div>
 </div>
 <div class="caption">
@@ -255,7 +265,7 @@ So, with all that said—
 
 상하이 동방명주가 불꺼지는 것을 기다리면서 상하이 도심 한복판을 돌아봤다.
 
-> Third Day : Move to brandnew city Hangzhou.
+> Third Day : mp4e to brandnew city Hangzhou.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
