--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   pdf          = {yoon2025iros.pdf},
   abbr         = {IROS},
   journal      = {IROS},
+  doi          = {10.1109/IROS60139.2025.11247074},
   preview      = {iros-g1.gif},
   abstract     = {Optimizing the initial angle of the shoulder’s base
 frame is crucial for defining the workspace and enhancing the
